# fastapi-with-docker-test

./: .gitignore  docker-compose.yml
backend/: .test.env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: database.py
backend/app/api/routes/: cleanings.py
backend/app/core/: config.py  events.py
backend/app/db/: events.py  migrate.py
backend/app/db/migrations/: 20210324_01_7KSWq-create-table-cleanings.rollback.sql  20210324_01_7KSWq-create-table-cleanings.sql
backend/app/db/repositories/: cleanings.py
backend/app/models/: cleaning.py  core.py  enum_type.py
backend/tests/: conftest.py  helpers.py  test_cleanings.py
